hphp/hack/test/typecheck/lambda/lambda_hof_bad.php.exp
File "lambda_hof_bad.php", line 15, characters 21-26:
Typing error (Typing[4110])
File "lambda_hof_bad.php", line 15, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_hof_bad.php", line 14, characters 18-23:
But got string
File "lambda_hof_bad.php", line 16, characters 29-34:
Typing error (Typing[4110])
File "lambda_hof_bad.php", line 16, characters 29-30:
Expected num because this is used in an arithmetic operation
File "lambda_hof_bad.php", line 14, characters 18-23:
But got string
